log
Fri May  1 05:57:35 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
17e4dd0
Fri May  1 06:13:11 PM UTC 2026: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:29: error: expected ‘;’ before ‘}’ token
   75 |             aux = aux->right
      |                             ^
      |                             ;
   76 |         }
      |         ~                    
9de06a6
